# TM

./: CMakeLists.txt  README.md
src/: Action.h  NTM.cpp  NTM.h  TM.cpp  TM.h  TM_State.h  Tape.cpp  Tape.h  main.cpp
